--- a/views/Admin/user-detail.hbs
+++ b/views/Admin/user-detail.hbs
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-3 flex-column">
                         <div class="tm-circular-avatar-container">
-                            <img src="img/avatar.png"/>
+                            <img src="/img/avatar.png"/>
                         </div>
                         <div class="tm-avatar-title d-flex justify-content-center">Lorem</div>
                     </div>
@@ -18,12 +18,12 @@
                     <div class="col-9">
                         <div class="tm-block-info-container flex-column h-100 py-4">
                             <div class="row px-3">
-                                <div class="col title">Mã khách hàng</div>
+                                <div class="col title">Customer ID</div>
                                 <div class="col text-dark">#123</div> <!--TODO{{id}}-->
                             </div>
                             <hr class="separator">
                             <div class="row px-3">
-                                <div class="col title">Tên khách hàng</div>
+                                <div class="col title">Customer Name</div>
                                 <div class="col text-dark">Lorem</div> <!--TODO{{name}}-->
                             </div>
                             <hr class="separator">
@@ -33,7 +33,7 @@
                             </div>
                             <hr class="separator">
                             <div class="row px-3">
-                                <div class="col title">Số điện thoại</div>
+                                <div class="col title">Tel</div>
                                 <div class="col text-dark">1234567890</div> <!--TODO{{tel}}-->
                             </div>
                         </div>
@@ -54,4 +54,7 @@
         </div>
     </div>
 </body>
+<footer>
+    {{> footerAdmin}}
+</footer>
 </html>
