--- a/views/Admin/add-product.hbs
+++ b/views/Admin/add-product.hbs
@@ -22,7 +22,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="/admin/products/add/" class="tm-edit-product-form" method="get">
+                <form action="" class="tm-edit-product-form">
                   <div class="form-group mb-3">
                     <label
                       for="name"
@@ -30,20 +30,7 @@
                     </label>
                     <input
                       id="name"
-                      name="product_name"
-                      type="text"
-                      class="form-control validate"
-                      required
-                    />
-                  </div>
-                  <div class="form-group mb-3">
-                    <label
-                      for="brand"
-                      >Product Brand
-                    </label>
-                    <input
-                      id="brand"
-                      name="brand"
+                      name="name"
                       type="text"
                       class="form-control validate"
                       required
@@ -58,7 +45,6 @@
                       class="form-control validate"
                       rows="3"
                       required
-                      name = "describe"
                     ></textarea>
                   </div>
                   <div class="form-group mb-3">
@@ -69,24 +55,23 @@
                     <select
                       class="custom-select tm-select-accounts"
                       id="category"
-                      name = 'category'
                     >
                       <option selected>Select category</option>
-                      {{#types}}
-                      <option value={{type_name}}>{{type_name}}</option>
-                      {{/types}}
+                      <option value="1">New Arrival</option>
+                      <option value="2">Most Popular</option>
+                      <option value="3">Trending</option>
                     </select>
                   </div>
                   <div class="row">
                       <div class="form-group mb-3 col-xs-12 col-sm-6">
                           <label
-                            for="import_date"
-                            >Import Date
+                            for="expire_date"
+                            >Expire Date
                           </label>
                           <input
-                            id="import_date"
+                            id="expire_date"
+                            name="expire_date"
                             type="text"
-                            name="import_date"
                             class="form-control validate"
                             data-large-mode="true"
                           />
@@ -94,37 +79,11 @@
                         <div class="form-group mb-3 col-xs-12 col-sm-6">
                           <label
                             for="stock"
-                            >Quantity
+                            >Units In Stock
                           </label>
                           <input
                             id="stock"
-                            name="in_stock"
-                            type="number"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3 col-xs-12 col-sm-6">
-                          <label
-                            for="price"
-                            >Price
-                          </label>
-                          <input
-                            id="price"
-                            name="price"
-                            type="number"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3 col-xs-12 col-sm-6">
-                          <label
-                            for="units"
-                            >Units
-                          </label>
-                          <input
-                            id="units"
-                            name = "unit"
+                            name="stock"
                             type="text"
                             class="form-control validate"
                             required
@@ -164,12 +123,10 @@
     <script>
       $('.fa-shopping-cart').parent().addClass('active');
       $(function() {
-        $("#import_date").datepicker();
+        $("#expire_date").datepicker();
       });
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
 
-    </script>
   </body>
 </html>
