--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -22,7 +22,9 @@
 
   {{> header}}
 
+
   <!-- product section -->
+
   <section class="product_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
@@ -34,7 +36,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src={{prod_img}} alt="" name={{prod_img}}>
+              <img src="/img/p1.png" alt="">
               <a href="/detail" class="add_cart_btn">
                 <span>
                   Add To Cart
@@ -47,15 +49,291 @@
               </a>
             </div>
             <div class="detail-box">
-              <h5 name={{prod_name}}>
-                {{prod_name}}
+              <h5>
+                Product Name
               </h5>
               <div class="product_info">
-                <h5 name={{prod_price}}>
-                  <span>$</span> {{prod_price}}
+                <h5>
+                  <span>$</span> 300
                 </h5>
                 <div class="star_container">
-
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p2.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p3.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p4.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p5.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p6.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p7.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p8.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <div class="box">
+            <div class="img-box">
+              <img src="/img/p9.png" alt="">
+              <a href="/detail" class="add_cart_btn">
+                <span>
+                  Add To Cart
+                </span>
+              </a>
+              <a href="/detail" class="detail_btn">
+                <span>
+                  Detail
+                </span>
+              </a>
+            </div>
+            <div class="detail-box">
+              <h5>
+                Product Name
+              </h5>
+              <div class="product_info">
+                <h5>
+                  <span>$</span> 300
+                </h5>
+                <div class="star_container">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -71,12 +349,11 @@
   </section>
 
   <!-- end product section -->
-  
+
+
   {{> footer}}
   {{> script}}
-  <script>
-    $('.star_container').append(`{{{prod_rating}}}`);
-  </script>
+  
 </body>
 
 </html>
