--- a/views/Admin/manage-users.hbs
+++ b/views/Admin/manage-users.hbs
@@ -14,21 +14,12 @@
                                 <tr>
                                     <th scope="col">&nbsp;</th>
                                     <th scope="col">USERNAME</th>
-                                    <th scope="col">REGISTER DATE</th>
-                                    <th scope="col">TOTAL PURCHASES</th>
-                                    <th scope="col">STATUS</th>
+                                    <th scope="col">FULL NAME</th>
+                                    <th scope="col">ADDRESS</th>
+                                    <th scope="col">EMAIL</th>
                                     <th scope="col">&nbsp;</th>
                                 </tr>
                             </thead>
-<<<<<<< Updated upstream
-                            <tbody>
-                                <tr>
-                                    <th scope="row"><input type="checkbox" /></th>
-                                    <td class="tm-product-name" onclick="location.href='./user-detail';" style="cursor: pointer;">Lorem</td> <!--TODO add name-->
-                                    <td>1/1/2022</td> <!--TODO add date-->
-                                    <td>550</td> <!--TODO add total-->
-                                    <td>Active</td> <!--TODO add status-->
-=======
                             <tbody id="userBody">
                                 {{#users}}
                                 <tr>
@@ -44,29 +35,14 @@
                                     <!--TODO add total-->
                                     <td>{{user_email}}</td>
                                     <!--TODO add status-->
->>>>>>> Stashed changes
                                     <td>
-                                        <a href="#" class="tm-product-delete-link">
+                                        <a href="./manages/del/{{user_id}}" class="tm-product-delete-link">
                                             <!--TODO add id-->
                                             <i class="far fa-trash-alt tm-product-delete-icon"></i>
                                         </a>
                                     </td>
                                 </tr>
-                                <!--TODO add {{#items}}-->
-                                <tr>
-                                    <th scope="row"><input type="checkbox" /></th>
-                                    <td class="tm-product-name" onclick="location.href='/user-detail';" style="cursor: pointer;">Lorem</td> <!--TODO add name-->
-                                    <td>1/1/2022</td> <!--TODO add date-->
-                                    <td>550</td> <!--TODO add total-->
-                                    <td>Active</td> <!--TODO add status-->
-                                    <td>
-                                        <a href="#" class="tm-product-delete-link">
-                                            <!--TODO add id-->
-                                            <i class="far fa-trash-alt tm-product-delete-icon"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <!--TODO add {{/items}}-->
+                                {{/users}}
                             </tbody>
                         </table>
                     </div>
